arreglo about me

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div id="aboutMe" class="bg-white bg-opacity-50 p-2 md:mx-auto lg:mx-0 md:max-w-screen-sm">
                 <h2 class="text-4xl text-blue-500 font-bold text-center tracking-wider mb-10">About me</h2>
 
-                <p class="font-sans font-medium text-center">Hi! I'm <b>Martin Gallinelli</b>. I am a person determined to develop my full potential, understanding that there are no limits other than those we impose on ourselves. Always wanting and doing to progress. I like teamwork. Self-taught, proactive, decisive and in search of new challenges to grow.</p>
+                <p class="font-sans font-medium text-center">Hi! I'm <b>Martin Gallinelli</b>. I am determined to develop my full potential, understanding that there are no limits other than those we impose on ourselves. Always working on my progress. I like teamwork. Self-taught, proactive, decisive and looking for new challenges for my grow.</p>
 
                 <table class="table-auto border-separate font-sans font-medium text-sm mx-auto mt-5">
                     <tbody>
@@ -534,7 +534,7 @@
                                     <p>Educación IT (Argentina)</p>
                                     <p class="italic">15 hours</p>
 
-                                    <p class="text-md font-bold uppercase mt-5">javascript from scratch</p>
+                                    <p class="text-md font-bold text-blue-300 uppercase mt-5">javascript from scratch</p>
                                     <p>Educación IT (Argentina)</p>
                                     <p class="italic">12 hours</p>
                                 </div>
