--- a/index.html
+++ b/index.html
@@ -653,7 +653,7 @@
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My experience</h2>
 
                 <div class="container mt-4 px-8 text-center">
-                    <div class="md:flex md:items-start md:justify-center">
+                    <div class="max-w-screen-md border shadow mx-auto pb-3 md:py-5 md:flex md:items-start md:justify-center">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 md:px-2">2018-Present</p>
                         </div>
