about me animacion

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     </tbody>
                 </table>
 
-                <p class="text-xl text-blue-600 font-bold text-center mt-5">Let's work together!</p>
+                <p id="" class="animate-bounce text-2xl text-blue-600 font-bold text-center mt-5">Let's work together!</p>
             </div>
         </div>
         <!-- FIN ABOUT ME -->
