nav fondo linkedin

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </div>
             
             <div id='menu' class="w-full block flex-grow text-right lg:flex lg:items-center lg:w-auto lg:mr-10 hidden">
-                <div class="text-md lg:flex-grow">
+                <div class="text-md font-medium lg:flex-grow">
                     <a href="#skills" class="block lg:inline-block mt-4 lg:mt-0 text-black border-transparent border-b-2 hover:text-white hover:border-white lg:mr-4">My Skills</a>
                     <a href="#studies" class="block lg:inline-block mt-4 lg:mt-0 text-black border-transparent border-b-2 hover:text-white hover:border-white lg:mr-4">My studies</a>
                     <a href="#works" class="block lg:inline-block mt-4 lg:mt-0 text-black border-transparent border-b-2 hover:text-white hover:border-white lg:mr-4">My experience</a>
                     <a href="https://www.linkedin.com/in/martingallinelli/" class="block lg:inline-block mt-4 lg:mt-0 bg-blue-50 bg-opacity-50 lg:bg-transparent py-1 lg:py-0 pr-1 lg:pr-0" target="_blank">
-                        <img src="images/linkedin.svg" alt="Logo de linkedin" class="w-5 shadow inline-block mb-0.5">
+                        <div class="md:rounded-full md:py-1 md:px-2 md:bg-white shadow"><img src="images/linkedin.svg" alt="Logo de linkedin" class="w-5 shadow inline-block mb-0.5"></div>
                     </a>
                 </div>
             </div>
