about me hover link headesign

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </tr>
                     <tr>
                         <td class="font-bold sm:pr-5">Website:</td>
-                        <td><a href="https://www.headesign.com.ar" target="_blank">Headesign</a></td>
+                        <td><a href="https://www.headesign.com.ar" target="_blank" class="hover:text-blue-500">Headesign</a></td>
                     </tr>
                     <tr>
                         <td class="font-bold sm:pr-5">Living in:</td>
