about me shadow

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <!-- ABOUT ME -->
         <div class="px-7 py-10 sm:px-10 lg:flex lg:justify-end">
-            <div id="aboutMe" class="bg-white bg-opacity-50 p-2 md:mx-auto lg:mx-0 md:max-w-screen-sm">
+            <div id="aboutMe" class="shadow bg-white bg-opacity-50 p-2 md:mx-auto lg:mx-0 md:max-w-screen-sm">
                 <h2 class="text-4xl text-blue-500 font-bold text-center tracking-wider mb-10">About me</h2>
 
                 <p class="font-sans font-medium text-center">Hi! I'm <b>Martin Gallinelli</b>. I am determined to develop my full potential, understanding that there are no limits other than those we impose on ourselves. Always working on my progress. I like teamwork. Self-taught, proactive, decisive and looking for new challenges for my grow.</p>
