about me tamaño letra + color link headesign

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 <p class="font-sans font-medium text-center">Hi! I'm <b>Martin Gallinelli</b>. I am determined to develop my full potential, understanding that there are no limits other than those we impose on ourselves. Always working on my progress. I like teamwork. Self-taught, proactive, decisive and looking for new challenges for my grow.</p>
 
-                <table class="table-auto border-separate font-sans font-medium text-sm mx-auto mt-5">
+                <table class="table-auto border-separate font-sans font-medium text-sm md:text-base mx-auto mt-5">
                     <tbody>
                     <tr>
                         <td class="font-bold sm:pr-5">Age:</td>
@@ -67,7 +67,7 @@
                     </tr>
                     <tr>
                         <td class="font-bold sm:pr-5">Website:</td>
-                        <td><a href="https://www.headesign.com.ar" target="_blank" class="hover:text-blue-500">Headesign</a></td>
+                        <td><a href="https://www.headesign.com.ar" target="_blank" class="hover:text-blue-600">Headesign</a></td>
                     </tr>
                     <tr>
                         <td class="font-bold sm:pr-5">Living in:</td>
