incorporacion de my projects

--- a/index.html
+++ b/index.html
@@ -756,14 +756,31 @@
         <!-- FIN WORK EXPERIENCE -->
 
         <!-- PROJECTS -->
-        <div class="py-16 bg-indigo-100 bg-opacity-75">
+        <div class="pt-16 bg-indigo-100 bg-opacity-75">
             <div id="projects">  
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My projects</h2>
 
                 <div class="container mt-4 px-8 text-center">
-                    <div class="grid grid-cols-1">
-                        <div class="border">
-                            <img src="images/web-navega.JPG" alt="Imagen del sitio web Navega por el mundo" class="rounded-xl">
+                    <div class="grid grid-cols-1 md:grid-cols-3">
+                        <div class="rounded-xl shadow-md">
+                            <a href="https://navegaxelmundo.com/" target="_blank"><img src="images/web-navega.JPG" alt="Imagen del sitio web Navega por el mundo" class="rounded-xl transform hover:scale-105 hover:shadow-2xl"></a>
+                        </div>  
+                        <div class="rounded-xl shadow-md">
+                            <a href="https://consultoraitaliana.com.ar/" target="_blank"><img src="images/web-consultora.JPG" alt="Imagen del sitio web Consultora de la ciudadanía italiana" class="rounded-xl  transform hover:scale-105 hover:shadow-2xl"></a>
+                        </div>
+                        <div class="rounded-xl shadow-md">
+                            <a href="http://www.suspension13.com.ar/" target="_blank"><img src="images/web-suspension.JPG" alt="Imagen del sitio web Suspensión 13" class="rounded-xl  transform hover:scale-105 hover:shadow-2xl"></a>
+                        </div>
+                    </div>
+                    <div class="grid grid-cols-3 justify-items-center">
+                        <div class="rounded-xl shadow-md transform -translate-y-24">
+                            <a href="https://navegaxelmundo.com/" target="_blank"><img src="images/web-navega-smart.JPG" alt="Imagen del sitio web Navega por el mundo" class="rounded-xl w-auto lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
+                        </div>
+                        <div class="rounded-xl shadow-md transform -translate-y-24">
+                            <a href="https://consultoraitaliana.com.ar/" target="_blank"><img src="images/web-consultora-smart.JPG" alt="Imagen del sitio web Consultora de la ciudadanía italiana" class="rounded-xl w-auto lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
+                        </div>
+                        <div class="rounded-xl shadow-md transform -translate-y-24">
+                            <a href="http://www.suspension13.com.ar/" target="_blank"><img src="images/web-suspension-smart.JPG" alt="Imagen del sitio web Suspensión 13" class="rounded-xl w-auto lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
                         </div>
                     </div>
                 </div>
