mejora my projects

--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
         <!-- FIN WORK EXPERIENCE -->
 
         <!-- PROJECTS -->
-        <div class="pt-16 bg-indigo-100 bg-opacity-75">
+        <div class="py-16 lg:pb-0 bg-indigo-100 bg-opacity-75">
             <div id="projects">  
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My projects</h2>
 
@@ -773,14 +773,14 @@
                         </div>
                     </div>
                     <div class="grid grid-cols-3 justify-items-center">
-                        <div class="rounded-xl shadow-md transform -translate-y-24">
-                            <a href="https://navegaxelmundo.com/" target="_blank"><img src="images/web-navega-smart.JPG" alt="Imagen del sitio web Navega por el mundo" class="rounded-xl w-auto lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
+                        <div class="rounded-xl shadow-md transform md:-translate-y-14 lg:-translate-y-24">
+                            <a href="https://navegaxelmundo.com/" target="_blank"><img src="images/web-navega-smart.JPG" alt="Imagen del sitio web Navega por el mundo" class="rounded-xl w-auto md:w-24 lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
                         </div>
-                        <div class="rounded-xl shadow-md transform -translate-y-24">
-                            <a href="https://consultoraitaliana.com.ar/" target="_blank"><img src="images/web-consultora-smart.JPG" alt="Imagen del sitio web Consultora de la ciudadanía italiana" class="rounded-xl w-auto lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
+                        <div class="rounded-xl shadow-md transform md:-translate-y-14 lg:-translate-y-24">
+                            <a href="https://consultoraitaliana.com.ar/" target="_blank"><img src="images/web-consultora-smart.JPG" alt="Imagen del sitio web Consultora de la ciudadanía italiana" class="rounded-xl w-auto md:w-24 lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
                         </div>
-                        <div class="rounded-xl shadow-md transform -translate-y-24">
-                            <a href="http://www.suspension13.com.ar/" target="_blank"><img src="images/web-suspension-smart.JPG" alt="Imagen del sitio web Suspensión 13" class="rounded-xl w-auto lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
+                        <div class="rounded-xl shadow-md transform md:-translate-y-14 lg:-translate-y-24">
+                            <a href="http://www.suspension13.com.ar/" target="_blank"><img src="images/web-suspension-smart.JPG" alt="Imagen del sitio web Suspensión 13" class="rounded-xl w-auto md:w-24 lg:w-40 transform hover:scale-105 hover:shadow-2xl"></a>
                         </div>
                     </div>
                 </div>
