modificacion en work experience

--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
             <div id="works">
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10 mx-2">My experience</h2>
 
-                <div class="container mt-4 px-8 text-center">
+                <div class="container mt-4 px-8 text-center mx-auto max-w-screen-lg">
                     <!-- FREELANCE -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
@@ -735,7 +735,7 @@
                     </div>
                     <!-- FIN FREELANCE -->
 
-                    <!-- MINISTERY -->
+                    <!-- MINISTRY -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold bg-yellow-300 bg-opacity-50 md:px-2">2009-Present</p>
@@ -744,12 +744,12 @@
                             <p class="font-bold">Position: accounting leader</p>
                         </div>
                         <div class="md:inline-block md:text-left px-2">
-                            <p class="text-md font-bold text-blue-500">Ministry of Health of the Province of Buenos Aires</p>
+                            <p class="text-md font-bold text-blue-500">Ministry of Health</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
                             <p>Audits, control of debts and payments to companies. Report writing. Use of Microsoft package.</p>
                         </div>
                     </div>
-                    <!-- FIN MINISTERY -->
+                    <!-- FIN MINISTRY -->
                 </div>
             </div>
         </div>
