--- a/index.html
+++ b/index.html
@@ -90,63 +90,62 @@
             <div id="skills">
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10">My Skills</h2>
 
-                <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-screen-md mx-auto">
+                <div class="grid grid-cols-1 max-w-screen-sm mx-auto">
                     <!-- TECHNICAL SKILLS -->
-                    <div class="border rounded-lg shadow-md mx-10 md:mx-4 mb-5 md:mb-0 py-5">
-                        <div class="text-center mb-10">
+                    <div class="mx-10 md:mx-4 mb-5 md:mb-0">
+                        <div class="text-center md:text-left mb-8">
                             <div class="inline-block border-b border-black pb-2">
                                 <i class="fas fa-cog text-2xl block text-yellow-500 md:inline-block md:mr-1"></i>
-                                <h3 class="text-2xl font-bold text-center md:inline-block">Technical Skills</h3>
+                                <h3 class="text-2xl font-bold md:inline-block">Technical Skills</h3>
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-3 md:grid-cols-5">
-                            <div class="mx-auto pb-2">
-                                <img src="images/html.svg" alt="Logo de HTML" class="w-10 pt-2">
+                        <div class="grid grid-cols-3 md:grid-cols-5 gap-3 justify-items-center">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/html.svg" alt="Logo de HTML" class="w-10 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/css.svg" alt="Logo de CSS" class="w-9 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/css.svg" alt="Logo de CSS" class="w-9 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-12 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-12 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 pt-4">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 pt-4 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/material.png" alt="Logo de Material CSS" class="w-10 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/material.png" alt="Logo de Material CSS" class="w-10 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/js.svg" alt="Logo de Javascript" class="w-10 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/js.svg" alt="Logo de Javascript" class="w-10 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/jquery.png" alt="Logo de Javascript" class="w-16 pt-4">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/jquery.png" alt="Logo de Javascript" class="w-16 pt-4 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/php.svg" alt="Logo de PHP" class="w-12 pt-4">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/php.svg" alt="Logo de PHP" class="w-12 pt-4 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/laravel.svg" alt="Logo de Laravel" class="w-10 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/laravel.svg" alt="Logo de Laravel" class="w-10 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/mysql.png" alt="Logo de MYSQL" class="w-11 pt-3">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/mysql.png" alt="Logo de MYSQL" class="w-11 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/git.svg" alt="Logo de GIT" class="w-11 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/git.svg" alt="Logo de GIT" class="w-11 py-2 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/trello.png" alt="Logo de Trello" class="w-16 pt-3">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/trello.png" alt="Logo de Trello" class="w-16 pt-3 mx-auto">
                             </div>
-                            <div class="mx-auto pb-2">
-                                <img src="images/figma.svg" alt="Logo de Figma" class="w-12 pt-2">
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/figma.svg" alt="Logo de Figma" class="w-12 py-2 mx-auto">
                             </div>
                         </div>
                     </div>
-
                     <!-- FIN TECHNICAL SKILLS -->
 
                     <!-- PROFESSIONAL SKILLS -->
-                    <div class="border rounded-lg shadow-md mx-10 md:mx-4 py-5">
+                    <!-- <div class="border rounded-lg shadow-md mx-10 md:mx-4 py-5">
                         <div class="text-center mb-10">
                             <div class="inline-block border-b border-black pb-2">
                                 <i class="fas fa-briefcase text-2xl block text-yellow-700 md:inline-block md:mr-2"></i>
@@ -163,9 +162,15 @@
                             <p class="font-bold leading-loose">Autodidact</p>
                             <p class="font-bold leading-loose">Adaptability</p>
                         </div>
-                    </div>
+                    </div> -->
                     <!-- FIN PROFESSIONAL SKILLS -->
                 </div>
+
+                <div class="grid grid-cols-1 max-w-screen-sm mx-auto">
+                    <!-- PROFESSIONAL SKILLS -->
+                    <!-- FIN PROFESSIONAL SKILLS -->
+                </div>
+
             </div>
         </div>
         <!-- FIN MY SKILLS -->
