--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
             <div id="skills">
                 <h2 class="text-4xl font-bold text-center tracking-wider mb-10">My Skills</h2>
 
-                <div class="grid grid-cols-1 max-w-screen-sm mx-auto">
+                <div class="grid grid-cols-1 max-w-screen-sm lg:max-w-screen-md mx-auto">
                     <!-- TECHNICAL SKILLS -->
-                    <div class="mx-10 md:mx-4 mb-5 md:mb-0">
+                    <div class="mx-7 md:mx-4 mb-5 md:mb-0">
                         <div class="text-center md:text-left mb-8">
                             <div class="inline-block border-b border-black pb-2">
                                 <i class="fas fa-cog text-2xl block text-yellow-500 md:inline-block md:mr-1"></i>
@@ -100,7 +100,7 @@
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-3 md:grid-cols-5 gap-3 justify-items-center">
+                        <div class="grid grid-cols-3 md:grid-cols-5 lg:grid-cols-7 gap-3 md:justify-items-center">
                             <div class="border rounded-lg shadow-md md:w-20">
                                 <img src="images/html.svg" alt="Logo de HTML" class="w-10 py-2 mx-auto">
                             </div>
@@ -143,34 +143,44 @@
                         </div>
                     </div>
                     <!-- FIN TECHNICAL SKILLS -->
+                </div>
 
+                <div class="grid grid-cols-1 max-w-screen-sm lg:max-w-screen-md mx-auto mt-5 md:mt-10">
                     <!-- PROFESSIONAL SKILLS -->
-                    <!-- <div class="border rounded-lg shadow-md mx-10 md:mx-4 py-5">
-                        <div class="text-center mb-10">
+                    <div class="mx-7 md:mx-4 mb-5 md:mb-0">
+                        <div class="text-center md:text-left mb-8">
                             <div class="inline-block border-b border-black pb-2">
                                 <i class="fas fa-briefcase text-2xl block text-yellow-700 md:inline-block md:mr-2"></i>
                                 <h3 class="text-2xl font-bold text-center md:inline-block">Professional Skills</h3>
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-1 md:grid-cols-2 text-center">
-                            <p class="font-bold leading-loose">Communicative</p>
-                            <p class="font-bold leading-loose">Proactive</p>
-                            <p class="font-bold leading-loose">Leadership</p>
-                            <p class="font-bold leading-loose">Teamwork</p>
-                            <p class="font-bold leading-loose">Responsability</p>
-                            <p class="font-bold leading-loose">Autodidact</p>
-                            <p class="font-bold leading-loose">Adaptability</p>
+                        <div class="grid grid-cols-2 md:grid-cols-4 gap-2 md:gap-4 md:justify-items-center">
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Communicative</p>
+                            </div> 
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Proactive</p>
+                            </div>
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Leadership</p>
+                            </div>
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Teamwork</p>
+                            </div>
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Responsability</p>
+                            </div>
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Autodidact</p>
+                            </div>    
+                            <div class="text-center border rounded-lg shadow-md md:w-36 lg:w-40 py-2">
+                                <p class="font-bold leading-loose">Adaptability</p>
+                            </div>                        
                         </div>
-                    </div> -->
+                    </div>
                     <!-- FIN PROFESSIONAL SKILLS -->
                 </div>
-
-                <div class="grid grid-cols-1 max-w-screen-sm mx-auto">
-                    <!-- PROFESSIONAL SKILLS -->
-                    <!-- FIN PROFESSIONAL SKILLS -->
-                </div>
-
             </div>
         </div>
         <!-- FIN MY SKILLS -->
@@ -535,7 +545,7 @@
                             <p class="text-md font-bold text-blue-500 uppercase">Headesign</p>
                             <p>(La Plata, Buenos Aires, Argentina)</p>
                             <p>Web design and web applications consultant.</p>
-                            <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma</p>
+                            <p>Developments based on PHP, Laravel, Javascript, MySQL, Bootstrap, Tailwind CSS, GIT, GitLab, GitHub, Trello, Figma.</p>
                             <a href="https://www.headesign.com.ar/" class="italic hover:text-blue-500">www.headesign.com.ar</a>
                         </div>
                     </div>
