agregado webinar mayo

--- a/index.html
+++ b/index.html
@@ -472,7 +472,11 @@
                                             <p class="font-semibold bg-white bg-opacity-50"><i class="fa fa-circle mr-3"></i> MAY 2021</p>
                                         </div>
                                         
-                                        <p class="text-md font-bold text-blue-300 uppercase">devops</p>
+                                        <p class="text-md font-bold text-blue-300 uppercase">Autenticación, autorización y aspectos de seguridad en aplicaciones web</p>
+                                        <p>Educación IT (Argentina)</p>
+                                        <p class="italic">2 hours</p>
+                                        
+                                        <p class="text-md font-bold text-blue-300 uppercase mt-5">devops</p>
                                         <p>Educación IT (Argentina)</p>
                                         <p class="italic">2 hours</p>
                                     </div>
