--- a/index.html
+++ b/index.html
@@ -135,6 +135,12 @@
                                 <img src="images/git.svg" alt="Logo de GIT" class="w-11 py-2 mx-auto">
                             </div>
                             <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/github.png" alt="Logo de GitHub" class="w-11 py-2 mx-auto">
+                            </div>
+                            <div class="border rounded-lg shadow-md md:w-20">
+                                <img src="images/gitlab.png" alt="Logo de GitLab" class="w-11 py-2 mx-auto">
+                            </div>
+                            <div class="border rounded-lg shadow-md md:w-20">
                                 <img src="images/trello.png" alt="Logo de Trello" class="w-16 pt-3 mx-auto">
                             </div>
                             <div class="border rounded-lg shadow-md md:w-20">
