--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
                                 <img src="images/github.png" alt="Logo de GitHub" class="w-11 py-2 mx-auto">
                             </div>
                             <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/gitlab.png" alt="Logo de GitLab" class="w-11 py-2 mx-auto">
+                                <img src="images/gitlab.png" alt="Logo de GitLab" class="w-11 py-3 mx-auto">
                             </div>
                             <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/trello.png" alt="Logo de Trello" class="w-8 pt-3 mx-auto">
+                                <img src="images/trello.png" alt="Logo de Trello" class="w-10 py-3 mx-auto">
                             </div>
                             <div class="border rounded-lg shadow-md md:w-20">
                                 <img src="images/figma.svg" alt="Logo de Figma" class="w-12 py-2 mx-auto">
