mejora visual technical skills

--- a/index.html
+++ b/index.html
@@ -100,51 +100,126 @@
                             </div>
                         </div>
 
-                        <div class="grid grid-cols-3 md:grid-cols-5 lg:grid-cols-7 gap-3 md:justify-items-center">
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/html.svg" alt="Logo de HTML" class="w-10 py-2 mx-auto">
+                        <div class="grid grid-cols-3 md:grid-cols-5 lg:grid-cols-7 gap-3 md:justify-items-center text-center font-bold">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/html.svg" alt="Logo de HTML" class="w-9 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/css.svg" alt="Logo de CSS" class="w-9 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/css.svg" alt="Logo de CSS" class="w-8 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-12 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-11 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 pt-4 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/material.png" alt="Logo de Material CSS" class="w-10 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/material.png" alt="Logo de Material CSS" class="w-9 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>2 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/js.svg" alt="Logo de Javascript" class="w-10 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/js.svg" alt="Logo de Javascript" class="w-9 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/jquery.png" alt="Logo de Javascript" class="w-16 pt-4 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/jquery.png" alt="Logo de Javascript" class="w-16 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/php.svg" alt="Logo de PHP" class="w-12 pt-4 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-4">
+                                    <img src="images/php.svg" alt="Logo de PHP" class="w-12 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/laravel.svg" alt="Logo de Laravel" class="w-10 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/laravel.svg" alt="Logo de Laravel" class="w-9 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/mysql.png" alt="Logo de MYSQL" class="w-11 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/mysql.png" alt="Logo de MYSQL" class="w-10 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/git.svg" alt="Logo de GIT" class="w-11 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/git.svg" alt="Logo de GIT" class="w-10 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/github.png" alt="Logo de GitHub" class="w-11 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/github.png" alt="Logo de GitHub" class="w-10 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/gitlab.png" alt="Logo de GitLab" class="w-11 py-3 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/gitlab.png" alt="Logo de GitLab" class="w-10 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/trello.png" alt="Logo de Trello" class="w-10 py-3 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/trello.png" alt="Logo de Trello" class="w-10 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
-                            <div class="border rounded-lg shadow-md md:w-20">
-                                <img src="images/figma.svg" alt="Logo de Figma" class="w-12 py-2 mx-auto">
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/figma.svg" alt="Logo de Figma" class="w-10 mx-auto">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
                             </div>
                         </div>
                     </div>
