ajustes de texto mal escrito

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                                     <img src="images/git.svg" alt="Logo de GIT" class="w-10 mx-auto">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
-                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                    <p>3.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
@@ -218,7 +218,7 @@
                                     <img src="images/figma.svg" alt="Logo de Figma" class="w-10 mx-auto">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
-                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                    <p>2.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
                                 </div>
                             </div>
                         </div>
@@ -341,7 +341,7 @@
                                         <p>Prof. Clara Vega</p>
                                         <p class="italic">1:30 hours - LinkedIn</p>
 
-                                        <p class="text-md font-bold text-blue-300 uppercase mt-5">GitHub for programmers programadores</p>
+                                        <p class="text-md font-bold text-blue-300 uppercase mt-5">GitHub for programmers</p>
                                         <p>Prof. Carlos Solis</p>
                                         <p class="italic">1:50 hours - LinkedIn</p>
 
