agregado de 2 webinars mayo

--- a/index.html
+++ b/index.html
@@ -552,8 +552,16 @@
                                         <div class="absolute -inset-2"> 
                                             <p class="font-semibold bg-white bg-opacity-50"><i class="fa fa-circle mr-3"></i> MAY 2021</p>
                                         </div>
+
+                                        <p class="text-md font-bold text-blue-300 uppercase">Front end web developer</p>
+                                        <p>Educación IT (Argentina)</p>
+                                        <p class="italic">2 hours</p>
+
+                                        <p class="text-md font-bold text-blue-300 uppercase mt-5">Introduction to Software Testing QA</p>
+                                        <p>Educación IT (Argentina)</p>
+                                        <p class="italic">2 hours</p>
                                         
-                                        <p class="text-md font-bold text-blue-300 uppercase">Autenticación, autorización y aspectos de seguridad en aplicaciones web</p>
+                                        <p class="text-md font-bold text-blue-300 uppercase mt-5">Authentication, authorization and security aspects in web applications</p>
                                         <p>Educación IT (Argentina)</p>
                                         <p class="italic">2 hours</p>
                                         
