--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="flex items-center justify-between flex-wrap p-6">
             <div class="text-black font-bold ml-2 md:ml-10 p-4 bg-white bg-opacity-50 shadow">
                 <h1 class="handlee text-2xl block mt-2 -m-2">Martin Gallinelli</h1>
-                <h2 class="teko text-sm text-gray-400 tracking-widest ml-16 pl-1 uppercase">web developer</h2>
+                <h2 class="teko text-sm text-gray-500 tracking-widest ml-16 pl-1 uppercase">web developer</h2>
             </div>
 
             <div class="block lg:hidden">
@@ -46,7 +46,7 @@
             <div id="aboutMe" class="shadow bg-white bg-opacity-50 p-2 md:mx-auto lg:mx-0 md:max-w-screen-sm">
                 <h2 class="text-4xl text-blue-500 font-bold text-center tracking-wider mb-10">About me</h2>
 
-                <p class="font-sans font-medium text-center">Hi! I'm <b>Martin Gallinelli</b>. I am determined to develop my full potential, understanding that there are no limits other than those we impose on ourselves. Always working on my progress. I like teamwork. Self-taught, proactive, decisive and looking for new challenges for my grow.</p>
+                <p class="font-sans font-medium text-center">Hi! I'm <b>Martin Gallinelli</b>. I am a person determined to develop my full potential, understanding that there are no limits other than those we impose on ourselves. Always working to progress. Self-taught, proactive, decisive and in search of new challenges to grow.</p>
 
                 <table class="table-auto border-separate font-sans font-medium text-sm md:text-base mx-auto mt-5">
                     <tbody>
@@ -73,6 +73,10 @@
                     <tr>
                         <td class="font-bold sm:pr-5">Living in:</td>
                         <td>La Plata, Bs. As., Argentina</td>
+                    </tr>
+                    <tr>
+                        <td class="font-bold sm:pr-5">My C.V.:</td>
+                        <td><a href="https://drive.google.com/file/d/1meeLCN2yIVujhVab7V3xl6-sgWlc9v6K/view?usp=sharing" target="_blank" class="hover:text-blue-600">VER (.pdf)</a></td>
                     </tr>
                     </tbody>
                 </table>
