--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="#works" class="block lg:inline-block mt-4 lg:mt-0 text-black border-transparent border-b-2 hover:text-white hover:border-white lg:mr-4">My experience</a>
                     <a href="#projects" class="block lg:inline-block mt-4 lg:mt-0 text-black border-transparent border-b-2 hover:text-white hover:border-white lg:mr-4">My projects</a>
                     <a href="https://www.linkedin.com/in/martingallinelli/" class="block lg:inline-block mt-4 lg:mt-0 bg-blue-50 bg-opacity-50 lg:bg-transparent py-1 lg:py-0 pr-1 lg:pr-0" target="_blank">
-                        <div class="md:rounded-full md:py-1 md:px-2 md:bg-white shadow"><img src="images/linkedin.svg" alt="Logo de linkedin" class="w-5 shadow inline-block mb-0.5"></div>
+                        <div class="md:rounded-full md:py-1 md:px-2 md:bg-white shadow"><img src="images/linkedin.svg" alt="Logo de linkedin" class="w-5 shadow inline-block mb-0.5" draggable="false"></div>
                     </a>
                 </div>
             </div>
@@ -107,7 +107,7 @@
                         <div class="grid grid-cols-3 md:grid-cols-5 lg:grid-cols-7 gap-3 md:justify-items-center text-center font-bold">
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/html.svg" alt="Logo de HTML" class="w-9 mx-auto">
+                                    <img src="images/html.svg" alt="Logo de HTML" class="w-9 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -115,7 +115,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/css.svg" alt="Logo de CSS" class="w-8 mx-auto">
+                                    <img src="images/css.svg" alt="Logo de CSS" class="w-8 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -123,7 +123,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-11 mx-auto">
+                                    <img src="images/bootstrap.svg" alt="Logo de Boostrap" class="w-11 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -131,7 +131,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 mx-auto">
+                                    <img src="images/tailwindcss.svg" alt="Logo de Tailwind CSS" class="w-12 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -139,7 +139,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/material.png" alt="Logo de Material CSS" class="w-9 mx-auto">
+                                    <img src="images/material.png" alt="Logo de Material CSS" class="w-9 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>2 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -147,7 +147,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/js.svg" alt="Logo de Javascript" class="w-9 mx-auto">
+                                    <img src="images/js.svg" alt="Logo de Javascript" class="w-9 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -155,7 +155,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/jquery.png" alt="Logo de Javascript" class="w-16 mx-auto">
+                                    <img src="images/jquery.png" alt="Logo de Javascript" class="w-16 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -163,7 +163,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-4">
-                                    <img src="images/php.svg" alt="Logo de PHP" class="w-12 mx-auto">
+                                    <img src="images/php.svg" alt="Logo de PHP" class="w-12 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -171,7 +171,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/laravel.svg" alt="Logo de Laravel" class="w-9 mx-auto">
+                                    <img src="images/laravel.svg" alt="Logo de Laravel" class="w-9 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -179,7 +179,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/mysql.png" alt="Logo de MYSQL" class="w-10 mx-auto">
+                                    <img src="images/mysql.png" alt="Logo de MYSQL" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -187,7 +187,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/git.svg" alt="Logo de GIT" class="w-10 mx-auto">
+                                    <img src="images/git.svg" alt="Logo de GIT" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>3.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -195,7 +195,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/github.png" alt="Logo de GitHub" class="w-10 mx-auto">
+                                    <img src="images/github.png" alt="Logo de GitHub" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -203,7 +203,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/gitlab.png" alt="Logo de GitLab" class="w-10 mx-auto">
+                                    <img src="images/gitlab.png" alt="Logo de GitLab" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>4 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -211,7 +211,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/trello.png" alt="Logo de Trello" class="w-10 mx-auto">
+                                    <img src="images/trello.png" alt="Logo de Trello" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
@@ -219,7 +219,7 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
-                                    <img src="images/figma.svg" alt="Logo de Figma" class="w-10 mx-auto">
+                                    <img src="images/figma.svg" alt="Logo de Figma" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
                                     <p>2.5 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
