correcion margin my skills

--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
                                         </div>
             
                                         <div class="relative pr-2">    
-                                            <p class="text-md font-bold text-blue-300 uppercase mt-5">HTML5 fundamentals of a web page</p>
+                                            <p class="text-md font-bold text-blue-300 uppercase">HTML5 fundamentals of a web page</p>
                                             <a class="example-image-link" href="images/certifications/Fundamentos de una pagina Web.jpg" data-lightbox="it-1">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
                                             <p>Educación IT (Argentina)</p>
                                             <p class="italic">12 hours</p>
