mejora visual work experience

--- a/index.html
+++ b/index.html
@@ -728,7 +728,7 @@
                     <!-- FREELANCE -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 md:px-2">jan-2018-Present</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">jan-2018-Present</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Position: co-owner</p>
@@ -746,7 +746,7 @@
                     <!-- MINISTRY -->
                     <div class="grid grid-cols-1 md:grid-cols-3 justify-items-center border shadow mt-4 pb-5 md:pt-5">
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
-                            <p class="font-bold bg-yellow-300 bg-opacity-50 md:px-2">feb-2009-may-21</p>
+                            <p class="font-bold bg-yellow-300 bg-opacity-50 px-2">feb-2009-may-21</p>
                         </div>
                         <div class="mb-4 md:inline-block md:mb-0 md:mr-8">
                             <p class="font-bold">Position: accounting leader</p>
