agragado de skill

--- a/index.html
+++ b/index.html
@@ -220,6 +220,14 @@
                             </div>
                             <div class="border rounded-lg shadow-md w-20 h-20">
                                 <div class="w-20 h-3/5 flex content-center pt-2">
+                                    <img src="images/jira.png" alt="Logo de Jira" class="w-10 mx-auto" draggable="false">
+                                </div>
+                                <div class="h-2/5 flex content-end justify-center">
+                                    <p>3 <small class="text-yellow-500"><i class="fas fa-star"></i></small></p>
+                                </div>
+                            </div>
+                            <div class="border rounded-lg shadow-md w-20 h-20">
+                                <div class="w-20 h-3/5 flex content-center pt-2">
                                     <img src="images/figma.svg" alt="Logo de Figma" class="w-10 mx-auto" draggable="false">
                                 </div>
                                 <div class="h-2/5 flex content-end justify-center">
