add course mongo

--- a/index.html
+++ b/index.html
@@ -344,6 +344,21 @@
                                 <div class="mx-14 border-l-2 border-white">
                                     <div class="relative pt-5 pb-2 pl-6 bg-black bg-opacity-50">
                                         <div class="absolute -inset-2"> 
+                                            <p class="font-bold bg-white bg-opacity-50"><i class="fa fa-circle mr-3"></i> JUNE 2021</p>
+                                        </div>
+
+                                        <div class="relative">
+                                            <p class="text-md font-bold text-blue-300 uppercase">MongoDB Fundamentals</p>
+                                            <a class="example-image-link" href="images/certifications/Mongo DB Fundamentos.jpg" data-lightbox="it-14">[ <i class="far fa-image text-lg text-white hover:text-blue-300"></i> ]</a>
+                                            <p>Educación IT (Argentina)</p>
+                                            <p class="italic">6 hours</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="mx-14 pt-8 border-l-2 border-white">
+                                    <div class="relative pt-5 pb-2 pl-6 bg-black bg-opacity-50">
+                                        <div class="absolute -inset-2"> 
                                             <p class="font-bold bg-white bg-opacity-50"><i class="fa fa-circle mr-3"></i> MARCH 2021</p>
                                         </div>
 
